# notey

./: .gitignore  README.md  STATUS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_capture.rs  call_detector.rs  db.rs  device_watcher.rs  diarize.rs  export.rs  hardware.rs  ingest.rs  lib.rs  live.rs  main.rs  models.rs  monitor.rs  pipeline.rs  proc_loopback.rs  speakers.rs  summarize.rs  transcribe.rs
src/components/: DevicePluggedDialog.tsx  ModelDownloader.tsx  RecordingsList.tsx  SettingsAudio.tsx  SettingsHardware.tsx  SettingsModels.tsx  SpeakerNamingDialog.tsx  Studio.tsx  TranscriptViewer.tsx
src/lib/: tauri-api.ts
